various intros and menus

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -20,35 +20,31 @@ well as how to mine HNT, and how to deploy IoT devices that use the Helium
 Network. Start your journey below. If, at any time, you don't find what you
 need, join us in [discord.gg/helium](https://discorg.gg/helium).
 
-Thanks for being a part of Helium.
+Thanks for being a part of Helium. 
 
 ### Helium Blockchain
 
-- Blockchain Primitives
-- Mining $HNT
-- Proof of Coverage
-- Consensus Protocol
-- The Helium Token
-- Transaction Fees
+- [Blockchain Primitives](/docs/blockchain/blockchain-primitives)
+- [Mining HNT](/docs/blockchain/mining)
+- [Proof of Coverage](/docs/blockchain/proof-of-coverage)
+- [Consensus Protocol](/docs/blockchain/consensus-protocol)
+- [The Helium Token](/docs/blockchain/helium-token)
+- [Transaction Fees](/docs/blockchain/transaction-fees)
 
 ### Mine $HNT
 
-- What is a Helium Miner?
-- Prebuilt Hotspots
-- Build a Gateway
-- Convert a LoRaWAN Gateway
-- Run a Miner
+- [What is a Helium Miner?](/docs/mine-hnt)
+- [Prebuilt Hotspots](/docs/mine-hnt/prebuilt-hotspots)
+- [Build a Gateway](/docs/mine-hnt/build-a-gateway)
 
 ### Use the Helium Network
 
-- Ready to Use Devices
-- Development Devices
-- Helium Console
-- Network Servers
+- [Ready to Use Devices](/docs/use-the-network/devices/ready-to-use)
+- [Development Devices](/docs/use-the-network/devices/development)
+- [Helium Console](/docs/use-the-network/console)
 
-### Community and Governance
+### Community, Governance, and Open Source
 
-- Helium Improvement Proposals
-- Discord and other Chat Platforms
-- Social Media
-- Contribute to Helium
+- [Discord Community Chat](/docs/community-governance#discord)
+- [Helium Improvement Proposals](/docs/community-governance#helium-improvement-proposals)
+- [Open Source Software](/docs/open-source/open-source)
