--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -1,7 +1,7 @@
 ---
 id: mine-hnt
 hide_title: true
-sidebar_label: What is Helium Miner?
+sidebar_label: What is a Helium Miner?
 slug: /mine-hnt
 ---
 
