--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -22,22 +22,13 @@ Device Management includes:
 Console is available as a free to use hosted application at
 [console.helium.com](https://console.helium.com).
 
-[Console Quickstart](/docs/use-the-network/console/quickstart)
-
-[User Managment](/docs/use-the-network/console/users)
-
-[Adding Devices](/docs/use-the-network/console/adding-devices)
-
-[Migrating Devices](/docs/use-the-network/console/migrating-devices)
-
-[Labels](/docs/use-the-network/console/labels)
-
-[Debug](/docs/use-the-network/console/debug)
-
-[Functions](/docs/use-the-network/console/functions)
-
-[Integrations](/docs/use-the-network/console/integrations)
-
-[CLI](/docs/use-the-network/console/cli)
-
-[API](/docs/use-the-network/console/api)
+* [Console Quickstart](/docs/use-the-network/console/quickstart)
+* [User Managment](/docs/use-the-network/console/users)
+* [Adding Devices](/docs/use-the-network/console/adding-devices)
+* [Migrating Devices](/docs/use-the-network/console/migrating-devices)
+* [Labels](/docs/use-the-network/console/labels)
+* [Debug](/docs/use-the-network/console/debug)
+* [Functions](/docs/use-the-network/console/functions)
+* [Integrations](/docs/use-the-network/console/integrations)
+* [CLI](/docs/use-the-network/console/cli)
+* [API](/docs/use-the-network/console/api)
