--- a/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/heltec-cubecell-htcc-ab01.mdx
+++ b/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/heltec-cubecell-htcc-ab01.mdx
@@ -7,7 +7,7 @@ slug: /use-the-network/devices/development/heltec-cubecell-htcc-ab01
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Adafruit Feather M0 RFM95
+## Heltec Cubecell HTCC AB01
 
 <img
   src={useBaseUrl(
