--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -7,14 +7,20 @@ slug: /use-the-network/devices
 
 ## Helium Devices
 
-### Find ready to use devices or learn how to develop your own.
-
-The Helium network supports any LoRaWAN capable device meeting the
+Find ready to use devices or learn how to develop your own. The Helium network supports any LoRaWAN capable device meeting the
 [v1.0.2 specification](https://lora-alliance.org/sites/default/files/2018-05/lorawan1_0_2-20161012_1398_1.pdf).
 
-### [Ready to Use Devices][devices.ready-to-use]
+### Ready to Use Devices
 
-### [Development Devices][devices.development]
+* [Adeunis Field Test Device](/docs/use-the-network/devices/ready-to-use/adeunis-field-test-device)
+* [Digital Matter LoRaWAN GPS](/docs/use-the-network/devices/ready-to-use/digital-matter-lorawan-gps)
+* [Dragino LHT65](/docs/use-the-network/devices/ready-to-use/dragino-lht65)
+* [SEEED SenseCAP](/docs/use-the-network/devices/ready-to-use/SEEED-SenseCAP)
 
-[devices.ready-to-use]: /docs/use-the-network/devices/ready-to-use
-[devices.development]: /docs/use-the-network/devices/development
+### Development Devices
+
+* [ST B-L072Z-LRWAN1](/docs/use-the-network/devices/development/st-b-l072z-lrwan1)
+* [Sparkfun Pro RF](/docs/use-the-network/devices/development/sparkfun-pro-rf)
+* [Adafruit Feather MO](/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95)
+* [Heltec Cubecell](/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01)
+* [Heltec WiFi LoRa 32 V2](/docs/use-the-network/devices/development/heltec-wifi-lora-32-v2)
