blocks api fixups

--- a/api/blockchain/blocks.mdx
+++ b/api/blockchain/blocks.mdx
@@ -31,6 +31,14 @@ No Parameters
 
 200: OK
 
+```json
+{
+    "data": {
+        "height": 644081
+    }
+}
+```
+
 </TabItem>
 </Tabs>
 
@@ -51,7 +59,7 @@ will be in the response when more results are available.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Path Parameters_
+_Query Parameters_
 
 | param             | Type     | Note                     |
 | ----------------- | -------- | ------------------------ |
