--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -5,9 +5,9 @@ sidebar_label: Introduction
 slug: /blockchain
 ---
 
-## The Helium blockchain
+# The Helium Blockchain
 
-The Helium blockchain is a new blockchain built from the ground up to
+The Helium Blockchain is a new blockchain built from the ground up to
 incentivize the creation of decentralized, public wireless networks. It's based
 on a new, novel work algorithm called Proof of Coverage, and rewards miners in
 $HNT, the native token of the Helium blockchain. Officially launched on July 29,
