fix mine hnt links

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -36,6 +36,8 @@ Thanks for being a part of Helium.
 - [What is a Helium Miner?](/docs/mine-hnt)
 - [Prebuilt Hotspots](/docs/mine-hnt/prebuilt-hotspots)
 - [Build a Gateway](/docs/mine-hnt/build-a-gateway)
+- [Convert a LoRaWAN Gateway](/docs/mine-hnt/convert-lorawan-gateway)
+- [Run a Miner](/docs/mine-hnt/run-a-miner)
 
 ### Use the Helium Network
 
