relocate api docs to main docs dir

--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -2,7 +2,7 @@
 id: accounts
 hide_title: true
 sidebar_label: Accounts
-slug: /blockchain/accounts
+slug: /api/blockchain/accounts
 ---
 
 import Tabs from "@theme/Tabs";
