--- a/docs/api/blockchain/blocks.mdx
+++ b/docs/api/blockchain/blocks.mdx
@@ -2,7 +2,7 @@
 id: blocks
 hide_title: true
 sidebar_label: Blocks
-slug: /blockchain/blocks
+slug: /api/blockchain/blocks
 ---
 
 import Tabs from "@theme/Tabs";
