--- a/docs/api/blockchain/cities.mdx
+++ b/docs/api/blockchain/cities.mdx
@@ -2,7 +2,7 @@
 id: cities
 hide_title: true
 sidebar_label: Cities
-slug: /blockchain/cities
+slug: /api/blockchain/cities
 ---
 
 import Tabs from "@theme/Tabs";
