--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -2,7 +2,7 @@
 id: hotspots
 hide_title: true
 sidebar_label: Hotspots
-slug: /blockchain/hotspots
+slug: /api/blockchain/hotspots
 ---
 
 import Tabs from "@theme/Tabs";
