--- a/docs/api/blockchain/ouis.mdx
+++ b/docs/api/blockchain/ouis.mdx
@@ -2,7 +2,7 @@
 id: ouis
 hide_title: true
 sidebar_label: OUIs
-slug: /blockchain/ouis
+slug: /api/blockchain/ouis
 ---
 
 import Tabs from "@theme/Tabs";
