--- a/docs/api/blockchain/stats.mdx
+++ b/docs/api/blockchain/stats.mdx
@@ -2,7 +2,7 @@
 id: stats
 hide_title: true
 sidebar_label: Stats
-slug: /blockchain/stats
+slug: /api/blockchain/stats
 ---
 
 import Tabs from "@theme/Tabs";
