remove all /docs link prefixes

--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -24,12 +24,12 @@ world.
 - [Transaction Fees][blockchain.transaction-fees]
 <!-- * [Chain Variables][blockchain.chain-variables] -->
 
-[blockchain.primitives]: /docs/blockchain/blockchain-primitives
-[blockchain.mining]: /docs/blockchain/mining
-[blockchain.proof-of-coverage]: /docs/blockchain/proof-of-coverage
-[blockchain.consensus-protocol]: /docs/blockchain/consensus-protocol
-[blockchain.helium-token]: /docs/blockchain/helium-token
-[blockchain.oracles]: /docs/blockchain/oracles
-[blockchain.transaction-fees]: /docs/blockchain/transaction-fees
+[blockchain.primitives]: /blockchain/blockchain-primitives
+[blockchain.mining]: /blockchain/mining
+[blockchain.proof-of-coverage]: /blockchain/proof-of-coverage
+[blockchain.consensus-protocol]: /blockchain/consensus-protocol
+[blockchain.helium-token]: /blockchain/helium-token
+[blockchain.oracles]: /blockchain/oracles
+[blockchain.transaction-fees]: /blockchain/transaction-fees
 
-<!-- [blockchain.chain-variables]: /docs/blockchain/chain-variables -->
+<!-- [blockchain.chain-variables]: /blockchain/chain-variables -->
