--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -22,12 +22,12 @@ The Helium Token is designed to serve the needs of the two primary parties in
 the Helium blockchain ecosystem:
 
 1. **Hotspot Hosts and Network Operators**. Host
-   [mine HNT](/docs/blockchain/mining) while deploying and maintaining network
+   [mine HNT](/blockchain/mining) while deploying and maintaining network
    coverage.
 2. **Enterprises and developers using the Helium Network** to connect devices
    and build IoT applications. Data Credits, which are a $USD-pegged utility token
    derived from HNT in a burn transaction,
-   [are used pay transaction fees](/docs/blockchain/transaction-fees) for wireless
+   [are used pay transaction fees](/blockchain/transaction-fees) for wireless
    data transmissions on the network (in addition to things like adding Hotspots
    and sending).
 
@@ -118,7 +118,7 @@ actual maximum supply is `223,000,000` HNT.
 
 As noted above, **Data Credits** are a $USD-pegged utility token derived from
 HNT in a burn transaction and used to pay
-[all transaction fees](/docs/blockchain/transaction-fees) on the Helium Network.
+[all transaction fees](/blockchain/transaction-fees) on the Helium Network.
 One Data Credit will always cost `$0.00001`. Or, `$1.00` will always buy you
 `100,000` Data Credits. But, as noted above, Data Credits are produced by
 burning HNT. And the market price of HNT will of course fluctuate.
@@ -130,7 +130,7 @@ trends such that, when equilibrium is found, the amount of HNT that exists
 remains static month on month. (Helium borrowed heavily from Factom’s usage of
 this design though other blockchains have also used it.) The amount of Data
 Credits produced by burning HNT will move up and down based on the USD price
-of HNT as reported by the [HNT Oracles](/docs/blockchain/oracles). Let's look at
+of HNT as reported by the [HNT Oracles](/blockchain/oracles). Let's look at
 a few examples of how this works on-chain.
 
 **Example 1**
