--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -24,27 +24,29 @@ Thanks for being a part of Helium.
 
 ### Helium Blockchain
 
-- [Blockchain Primitives](/docs/blockchain/blockchain-primitives)
-- [Mining HNT](/docs/blockchain/mining)
-- [Proof of Coverage](/docs/blockchain/proof-of-coverage)
-- [Consensus Protocol](/docs/blockchain/consensus-protocol)
-- [The Helium Token](/docs/blockchain/helium-token)
-- [Transaction Fees](/docs/blockchain/transaction-fees)
+- [Blockchain Primitives](/blockchain/blockchain-primitives)
+- [Mining HNT](/blockchain/mining)
+- [Proof of Coverage](/blockchain/proof-of-coverage)
+- [Consensus Protocol](/blockchain/consensus-protocol)
+- [The Helium Token](/blockchain/helium-token)
+- [Transaction Fees](/blockchain/transaction-fees)
 
 ### Mine $HNT
 
-- [What is a Helium Miner?](/docs/mine-hnt)
-- [Prebuilt Hotspots](/docs/mine-hnt/prebuilt-hotspots)
-- [Build a Gateway](/docs/mine-hnt/build-a-gateway)
+- [What is a Helium Miner?](/mine-hnt)
+- [Prebuilt Hotspots](/mine-hnt/prebuilt-hotspots)
+- [Build a Gateway](/mine-hnt/build-a-gateway)
+- [Convert a LoRaWAN Gateway](/mine-hnt/convert-lorawan-gateway)
+- [Run a Miner](/mine-hnt/run-a-miner)
 
 ### Use the Helium Network
 
-- [Ready to Use Devices](/docs/use-the-network/devices/ready-to-use)
-- [Development Devices](/docs/use-the-network/devices/development)
-- [Helium Console](/docs/use-the-network/console)
+- [Ready to Use Devices](/use-the-network/devices/ready-to-use)
+- [Development Devices](/use-the-network/devices/development)
+- [Helium Console](/use-the-network/console)
 
 ### Community, Governance, and Open Source
 
-- [Discord Community Chat](/docs/community-governance#discord)
-- [Helium Improvement Proposals](/docs/community-governance#helium-improvement-proposals)
-- [Open Source Software](/docs/open-source/open-source)
+- [Discord Community Chat](/community-governance#discord)
+- [Helium Improvement Proposals](/community-governance#helium-improvement-proposals)
+- [Open Source Software](/open-source/open-source)
