--- a/docs/mine-hnt/build-a-gateway/build-a-gateway.mdx
+++ b/docs/mine-hnt/build-a-gateway/build-a-gateway.mdx
@@ -27,7 +27,7 @@ To be a Helium Miner, there are three principle components to know about
   component is interested in receiving the packets relating to its devices and
   handles downlink responses when appropriate
 
-When you buy [a prebuilt Hotspot](/docs/mine-hnt/prebuilt-hotspots), you are
+When you buy [a prebuilt Hotspot](/mine-hnt/prebuilt-hotspots), you are
 buying a Packet Forwarder and a Miner in a convenient package. Everything is
 ready to go from the moment you plug it in and the device is kept up to date by
 Helium, Inc.
@@ -36,7 +36,7 @@ However, any device that can run an 8 channel LoRa front-end (such as SX1301 or
 SX1302) can be used to participate in the Helium Network. The Miner is designed
 to send and receive packets using the Semtech Gateways Messaging Protocol
 (GWMP), making it compatible with almost every LoRaWAN Gateway on the Market.
-[We have guides for several LoRaWAN Gateways](/docs/mine-hnt/convert-lorawan-gateway)
+[We have guides for several LoRaWAN Gateways](/mine-hnt/convert-lorawan-gateway)
 that work very well and using one of them gives you one less thing to worry
 about as the Packet Forwarder is setup and ready to go.
 
@@ -166,7 +166,7 @@ PLACEHOLDER
 ### Connecting to a Miner
 
 Before proceeding, you want to make sure that
-[you have a Miner running](/docs/mine-hnt/run-a-miner). If the Miner is running
+[you have a Miner running](/mine-hnt/run-a-miner). If the Miner is running
 on the Raspberry Pi already and is properly mapped to port 1680, then there's
 nothing to do! Otherwise, read on.
 
