--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -66,7 +66,7 @@ challenge packet after it has been transmitted.
 ### Challenge Proof Construction and Target Selection
 
 As noted above, Hotspot are currently allowed to submit a challenge proof roughly once per 
-240 blocks. They do this reliably [to earn the portion of HNT rewards allocated to challengers](/docs/blockchain/mining). 
+240 blocks. They do this reliably [to earn the portion of HNT rewards allocated to challengers](/blockchain/mining). 
 The Challenger first generates an ephemeral public/private key pair to be used in the challenge. 
 A SHA256 digest of the public key and the SHA256 digest of the private key are both submitted, 
 along with the current block hash, as a PoC request. If the request is valid and accepted by the 
@@ -95,7 +95,7 @@ to the blockchain by the POC Challenger.
 
 ### POC Reward Scaling
 
-For every epoch, each [reward type](/docs/blockchain/mining) is split amongst Hotspots who had a role in that reward pool. 
+For every epoch, each [reward type](/blockchain/mining) is split amongst Hotspots who had a role in that reward pool. 
 For example, if your Hotspot was challenged during an epoch, it will be eligible to a portion of the 5.31% of rewards that 
 go to PoC Transmitters. A practical way of thinking about this is that a Hotspot might earn a "reward unit" for succeeding at a challenge. 
 If five additional Hotspots succeeded at a challenge during the epoch and each of them also earned a "reward unit", 
