remove all /docs link prefixes

--- a/docs/mine-hnt/run-a-miner/run-a-miner.mdx
+++ b/docs/mine-hnt/run-a-miner/run-a-miner.mdx
@@ -195,7 +195,7 @@ to keep your miner running.
 #### Interact with the Miner within the Container
 
 You may want to interrogate the Miner or interact with it it as described in the
-[using a miner section](/docs/mine-hnt/run-a-miner#using-the-miner). Docker's
+[using a miner section](/mine-hnt/run-a-miner#using-the-miner). Docker's
 `exec` command enables this, eg:
 
 ```text
@@ -203,7 +203,7 @@ docker exec miner miner info height
 ```
 
 In other words, prepend `docker exec miner` to any of the commands documented in
-the [using a miner section](/docs/mine-hnt/run-a-miner#using-the-miner)). Or
+the [using a miner section](/mine-hnt/run-a-miner#using-the-miner)). Or
 create an alias such as: `alias miner="docker exec miner miner"`
 
 #### Updating the Docker Image
@@ -380,4 +380,4 @@ the ways to earn tokens as a coverage provider for Helium is by routing IoT
 traffic.
 
 To learn more about this, check out the
-[build a gateway](/docs/mine-hnt/build-a-gateway) section.
+[build a gateway](/mine-hnt/build-a-gateway) section.
