initial build out

--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -3,6 +3,7 @@ id: blockchain
 hide_title: true
 sidebar_label: Introduction
 slug: /blockchain
+hide_table_of_contents: true
 ---
 
 # The Helium Blockchain
