--- a/docs/mine-hnt/build-a-hotspot/build-a-hotspot.mdx
+++ b/docs/mine-hnt/build-a-hotspot/build-a-hotspot.mdx
@@ -1,13 +1,13 @@
 ---
-id: build-a-gateway
+id: build-a-hotspot
 hide_title: true
-sidebar_label: Build a Gateway
-slug: /mine-hnt/build-a-gateway
+sidebar_label: Build a Hotspot
+slug: /mine-hnt/build-a-hotspot
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Build a Gateway
+## Build a Hotspot
 
 **Note**: The ability to mine HNT with anything other than prebuilt Hotspots is
 currently under development following the conclusion of the DIY Alpha program.
