--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -5,6 +5,10 @@ sidebar_label: Overview
 slug: /open-source/open-source
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img src={useBaseUrl("img/open-source/oss.svg")} style={{width: 200}} />
+
 ## Helium is Open Source
 
 The Helium Network is built almost entirely on open source code. And we actively
