--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -65,7 +65,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 	    	<p className="podtext">Miners create The People’s Network, a long-range wireless coverage for very low power and inexpensive IoT devices and are rewarded $HNT for doing so.</p>
 	    	<a href="/mine-hnt">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    	<h5>Quick Links</h5>
-	    	<a className="block" href="/mine-hnt/mine-hnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> What is a Helium Miner?</a>
+	    	<a className="block" href="/mine-hnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> What is a Helium Miner?</a>
 	    	<a className="block" href="/mine-hnt/prebuilt-hotspots"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Prebuilt Hotspots</a>
 	    	<a className="block" href="/mine-hnt/build-a-hotspot"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Build a Hotspot</a>
 	    	<a className="block" href="/mine-hnt/convert-lorawan-gateway"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Convert a LoRaWAN Gateway</a>
@@ -104,7 +104,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 	    	<div className="tech--item">
 	    		 <img className="techicon" src={useBaseUrl("img/home/console.svg")} />
 	    		 <div className="tech--item_text">
-	    		 	<a href="/console"><h4>Console</h4></a>
+	    		 	<a href="/use-the-network/console"><h4>Console</h4></a>
 	    		 	<p>Provision and Manage Devices</p>
 	    		 </div>
 	    	</div>
