--- a/docs/mine-hnt/run-a-miner/run-a-miner.mdx
+++ b/docs/mine-hnt/run-a-miner/run-a-miner.mdx
@@ -380,4 +380,4 @@ the ways to earn tokens as a coverage provider for Helium is by routing IoT
 traffic.
 
 To learn more about this, check out the
-[build a gateway](/mine-hnt/build-a-gateway) section.
+[build a Hotspot](/mine-hnt/build-a-hotspot) section.
