--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -3,50 +3,159 @@ id: home
 hide_title: true
 sidebar_label: Home
 slug: /
+hide_table_of_contents: true
+
 ---
 
-## Helium Documentation
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Helium is global, distributed network of Miners that create public, long-range
-wireless coverage for LoRaWAN-enabled IoT devices. Miners produce and are
-compensated in $HNT, the native cryptocurrency of the Helium blockchain. The
-Helium blockchain is a new, open source, public blockchain created entirely to
-incentivize the creation of physical, decentralized wireless networks. Today,
-the Helium blockchain, and it thousands of miners, provide access to the
-largest, public LoRaWAN Network in the world.
+<div class="container" style={{padding: 0}}>
+	<div class="row">
+		<div class="col col--4">
+			<h1>Welcome to Helium</h1>
+			<h2 className="subtitle">Explore our guides and examples to build and use the Helium Network.</h2>
+			<a className="button" href="/">Quick start <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowwhite.svg")} /></a>
+			<div>
+				<a href="/blockchain"><span class="badge badge--secondary">Developers</span></a>
+				<a href="/mine-hnt"><span class="badge badge--secondary">Miners</span></a>
+				<a href="/community-governance"><span class="badge badge--secondary">Supporters</span></a>
+			</div>
+		</div>
+		<div class="col col--8">
+			<img className="docsheader" src={useBaseUrl("img/home/docsheader.png")} />
+		</div>
+	</div>
+</div>
+<hr />
 
-This documentation provides details on the technology that underpins Helium, as
-well as how to mine HNT, and how to deploy IoT devices that use the Helium
-Network. Start your journey below. If, at any time, you don't find what you
-need, join us in [discord.gg/helium](https://discorg.gg/helium).
+<div class="container" style={{padding: 0}}>
+  <div class="row">
+  	<div class="col col--12">
+  		<h2>Introduction</h2>
+  	</div>
+    <div class="col col--6">
+    	<p>Helium is global, distributed network of Miners that create public, long-range wireless coverage for LoRaWAN-enabled IoT devices. Miners produce and are compensated in $HNT, the native cryptocurrency of the Helium blockchain. The Helium blockchain is a new, open source, public blockchain created entirely to incentivize the creation of physical, decentralized wireless networks. Today, the Helium blockchain, and it thousands of miners, provide access to the largest, public LoRaWAN Network in the world.</p>
+    </div>
+    <div class="col col--6">
+    	<p>This documentation provides details on the technology that underpins Helium, as well as how to mine HNT, and how to deploy IoT devices that use the Helium Network. Start your journey below. </p>
+    	<p>If, at any time, you don't find what you need, join us in <a href="https://discorg.gg/helium">our Discord</a>.</p>
+    	<p style={{fontWeight: 600}}>Thanks for being a part of Helium.</p>
+    </div>
+  </div>
+</div>
 
-Thanks for being a part of Helium. 
+<div class="container" style={{padding: 0, paddingTop: 100}}>
+	<div class="row">
+	    <div class="col col--6"  style={{marginBottom: 100}}>
+	    	<img className="homeicon" src={useBaseUrl("img/home/blockchainicon.png")} />
+	    	<h3>Helium Blockchain</h3>
+	    	<p className="podtext">The Helium Blockchain is a new blockchain built  from the ground up to incentivize the creation of decentralized, public wireless networks.</p>
+	    	<a href="/blockchain">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+	    	<h5>Quick Links</h5>
+	    	<a className="block" href="/blockchain/blockchain-primitives"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Blockchain Primitives</a>
+	    	<a className="block" href="/blockchain/mining"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Mining HNT</a>
+	    	<a className="block" href="/blockchain/proof-of-coverage"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Proof of Coverage</a>
+	    	<a className="block" href="/blockchain/consensus-protocol"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Consensus Protocol</a>
+	    	<a className="block" href="/blockchain/helium-token"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Helium Token</a>
+	    	<a className="block" href="/blockchain/transaction-fees"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Transaction Fees</a>
+	    </div>
+	    <div class="col col--6 " style={{marginBottom: 100}}>
+	   		<img className="homeicon" src={useBaseUrl("img/home/mineicon.png")} />
+	    	<h3>Mine $HNT</h3>
+	    	<p className="podtext">Miners create The People’s Network, a long-range wireless coverage for very low power and inexpensive IoT devices and are rewarded $HNT for doing so.</p>
+	    	<a href="/mine-hnt">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+	    	<h5>Quick Links</h5>
+	    	<a className="block" href="/mine-hnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> What is a Helium Miner?</a>
+	    	<a className="block" href="/mine-hnt/prebuilt-hotspots"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Prebuilt Hotspots</a>
+	    	<a className="block" href="/mine-hnt/build-a-hotspot"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Build a Hotspot</a>
+	    	<a className="block" href="/mine-hnt/convert-lorawan-gateway"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Convert a LoRaWAN Gateway</a>
+	    	<a className="block" href="/mine-hnt/run-a-miner"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a Miner</a>
+	    </div>
+	    <div class="col col--6 "  style={{marginBottom: 100}}>
+		    <img className="homeicon" src={useBaseUrl("img/home/useicon.png")} />
+		    <h3>Use the Helium Network</h3>
+		    <p className="podtext">The Helium Ecosystem includes thousands of read-to-use devices, powerful integrations and  robust developer tools.</p>
+		    <a href="/use-the-network">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+		    <h5>Quick Links</h5>
+		    <a className="block" href="/use-the-network/devices/ready-to-use"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Ready to Use Devices</a>
+		    <a className="block" href="/use-the-network/devices/development"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Development Devices</a>
+		    <a className="block" href="/use-the-network/console"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Helium Console</a>
+	    </div>
+	    <div class="col col--6"  style={{marginBottom: 100}}>
+		    <img className="homeicon" src={useBaseUrl("img/home/communityicon.png")} />
+		    <h3>Community, Governance, & Open Source</h3>
+		    <p className="podtext">Helium’s decentralized ‘People’s Network’ relies on a community of supporters, developers and advisors.</p>
+		    <a href="/community-governance">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+		    <h5>Quick Links</h5>
+		    <a className="block" href="/community-governance#discord"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Discord Community Chat</a>
+		    <a className="block" href="/community-governance#helium-improvement-proposals"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Helium Improvement Proposals</a>
+		    <a className="block" href="/open-source/open-source"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Open Source Software
+		    </a>
+	    </div>
+  	</div>
+</div>
+<hr />
+<div class="container" style={{padding: 0, paddingTop: 100}}>
+	<div class="row">
+	    <div class="col col--12" style={{marginBottom: 50}}>
+	    	<h2>Tools, Technologies & Initatives</h2>
+	    </div>
+	    <div class="col col--6">
+	    	<div className="tech--item">
+	    		 <img className="techicon" src={useBaseUrl("img/home/console.svg")} />
+	    		 <div className="tech--item_text">
+	    		 	<a href="/use-the-network/console"><h4>Console</h4></a>
+	    		 	<p>Provision and Manage Devices</p>
+	    		 </div>
+	    	</div>
+	    	<div className="tech--item">
+	    		 <img className="techicon" src={useBaseUrl("img/home/explorer.svg")} />
+	    		 <div className="tech--item_text">
+	    		 	<a href="https://explorer.helium.com"><h4>Explorer</h4></a>
+	    		 	<p>Helium Blockchain Block Explorer</p>
+	    		 </div>
+	    	</div>
+	    	<div className="tech--item">
+	    		 <img className="techicon" src={useBaseUrl("img/home/mappers.svg")} />
+	    		 <div className="tech--item_text">
+	    		 	<a href="https://mappers.helium.com"><h4>Mappers</h4></a>
+	    		 	<p>Community-driven Coverage Mapping</p>
+	    		 </div>
+	    	</div>
+	    	<div className="tech--item">
+	    		 <img className="techicon" src={useBaseUrl("img/home/walletapp.svg")} />
+	    		 <div className="tech--item_text">
+	    		 	<a href="https://helium.com/app"><h4>Wallet App</h4></a>
+	    		 	<p>iOS & Android Helium Wallet</p>
+	    		 </div>
+	    	</div>
+	    </div>
+	    <div class="col col--6">
+	    	<div className="tech--item">
+	    		 <img className="techicon" src={useBaseUrl("img/home/cli.svg")} />
+	    		 <div className="tech--item_text">
+	    		 	<a href="https://github.com/helium/helium-wallet-rs"><h4>Helium Wallet CLI</h4></a>
+	    		 	<p>Interact with Blockchain via Command Line</p>
+	    		 </div>
+	    	</div>
+	    	<div className="tech--item">
+	    		 <img className="techicon" src={useBaseUrl("img/home/longfi.svg")} />
+	    		 <div className="tech--item_text">
+	    		 	<a href="https://github.com/helium/gateway-rs"><h4>Helium Light Hotspots</h4></a>
+	    		 	<p>Packet forwarder for the Helium-enabled Gateways.</p>
+	    		 </div>
+	    	</div>
+	    	<div className="tech--item">
+	    		 <img className="techicon" src={useBaseUrl("img/home/mappers.svg")} />
+	    		 <div className="tech--item_text">
+	    		 	<a href="https://helium.com/insider"><h4>Insiders</h4></a>
+	    		 	<p>Raise awareness in your city</p>
+	    		 </div>
+	    	</div>
+	    </div>
+	</div>
+</div>
 
-### Helium Blockchain
 
-- [Blockchain Primitives](/blockchain/blockchain-primitives)
-- [Mining HNT](/blockchain/mining)
-- [Proof of Coverage](/blockchain/proof-of-coverage)
-- [Consensus Protocol](/blockchain/consensus-protocol)
-- [The Helium Token](/blockchain/helium-token)
-- [Transaction Fees](/blockchain/transaction-fees)
 
-### Mine $HNT
 
-- [What is a Helium Miner?](/mine-hnt)
-- [Prebuilt Hotspots](/mine-hnt/prebuilt-hotspots)
-- [Build a Gateway](/mine-hnt/build-a-gateway)
-- [Convert a LoRaWAN Gateway](/mine-hnt/convert-lorawan-gateway)
-- [Run a Miner](/mine-hnt/run-a-miner)
-
-### Use the Helium Network
-
-- [Ready to Use Devices](/use-the-network/devices/ready-to-use)
-- [Development Devices](/use-the-network/devices/development)
-- [Helium Console](/use-the-network/console)
-
-### Community, Governance, and Open Source
-
-- [Discord Community Chat](/community-governance#discord)
-- [Helium Improvement Proposals](/community-governance#helium-improvement-proposals)
-- [Open Source Software](/open-source/open-source)
