adding api key and 2fa settings info

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -32,3 +32,4 @@ Console is available as a free to use hosted application at
 * [Integrations](/use-the-network/console/integrations)
 * [CLI](/use-the-network/console/cli)
 * [API](/use-the-network/console/api)
+* [Account Security and API Keys](/use-the-network/console/my-account)
