--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -23,7 +23,7 @@ Console is available as a free to use hosted application at
 [console.helium.com](https://console.helium.com).
 
 * [Console Quickstart](/use-the-network/console/quickstart)
-* [User Managment](/use-the-network/console/users)
+* [Users and Organizations](/use-the-network/console/users)
 * [Adding Devices](/use-the-network/console/adding-devices)
 * [Migrating Devices](/use-the-network/console/migrating-devices)
 * [Labels](/use-the-network/console/labels)
@@ -32,3 +32,4 @@ Console is available as a free to use hosted application at
 * [Integrations](/use-the-network/console/integrations)
 * [CLI](/use-the-network/console/cli)
 * [API](/use-the-network/console/api)
+* [Account Security and API Keys](/use-the-network/console/my-account)
