small typo in locations api

--- a/docs/api/blockchain/locations.mdx
+++ b/docs/api/blockchain/locations.mdx
@@ -8,9 +8,9 @@ slug: /api/blockchain/locations
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Locationss
+# Locations
 
-Locations are used to associated human readable geographic informaion to an h3
+Locations are used to associate human readable geographic informaion to an h3
 location. This API exposes this geographic information. 
 
 ---
