comment out quick start home button for now

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -14,7 +14,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 		<div class="col col--4">
 			<h1>Welcome to Helium</h1>
 			<h2 className="subtitle">Explore our guides and examples to build and use the Helium Network.</h2>
-			<a className="button" href="/">Quick start <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowwhite.svg")} /></a>
+			{/* <a className="button" href="/">Quick start <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowwhite.svg")} /></a> */}
 			<div>
 				<a href="/blockchain"><span class="badge badge--secondary">Developers</span></a>
 				<a href="/mine-hnt"><span class="badge badge--secondary">Miners</span></a>
