adding info to label settings about ADR

--- a/docs/use-the-network/console/labels.mdx
+++ b/docs/use-the-network/console/labels.mdx
@@ -86,4 +86,23 @@ Helium Console will deliver email-based notifications for various events that ha
 
 <img src={useBaseUrl("img/use-the-network/console/labels-notification-settings.png")} />
 
+### Adaptive Data Rate
+
+To allow ADR for one device or a group of devices, simply toggle the `Allow ADR` in your Label settings. You can
+either create a Label strictly for managing ADR, or adjust the setting on a Label you already have attached to your devices. 
+
+:::info
+
+You can read complete documentation on Helium's ADR implementation [here](/use-the-network/console/adr).
+
+:::
+
+
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/console-adr-label-settings-adr.png"
+  )}
+/>
+
+
 
